View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026154 | Open CASCADE | OCCT:Visualization | public | 2015-04-27 12:21 | 2019-08-11 10:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 5.2.2 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0026154: Visualization - v3d viewer grid disappears due to automatic z-fit | ||||
Description | Automatic z-fit does not treat v3d viewer's grid graphical structure. This is because V3d_RectangularGrid sets presentation bounding box incorrectly. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION vinit View1 box b 1 1 1 vdisplay b vfit vgrid -type rect -mode line -origin 0 0 -step 1 1 -rotAngle 0 vtop # the grid disappears, see images "before_vtop.png", "after_vtop.png" vzrange 0 150 # the grid is now visible | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug26154 | ||||
2015-04-27 12:21 developer |
before_vtop.png (9,288 bytes) |
2015-04-27 12:21 developer |
after_vtop.png (1,246 bytes) |
|
Problem described in issue is reproduced on current state of OCCT. |
|
Branch CR26154 has been created by kgv. SHA-1: 6e0342589ae02f3cb81ceacf97baf67eab7cab84 Detailed log of new commits: Author: kgv Date: Mon Jul 29 17:49:58 2019 +0300 0026154: Visualization - v3d viewer grid disappears due to automatic z-fit V3d_RectangularGrid, V3d_CircularGrid, fixed initialization of presentation bounding box (lost Z offset). |
|
Branch CR26154 has been updated forcibly by kgv. SHA-1: b7e74d60c230cadae76cb71063a9631b5c3989ad |
|
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR26154-master-KGV/ |
|
Combination - OCCT branch : CR26154 master SHA - b7e74d60c230cadae76cb71063a9631b5c3989ad 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 53815c0544dd1e39d32ee14979d7d88e78729edc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16234.010000000071 / 16237.229999999976 [-0.02%] Products Total CPU difference: 10489.170000000038 / 10493.010000000033 [-0.04%] Windows-64-VC14: OCCT Total CPU difference: 17655.171875 / 17592.765625 [+0.35%] Products Total CPU difference: 12086.453125 / 12065.453125 [+0.17%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR26154 has been deleted by inv. SHA-1: b7e74d60c230cadae76cb71063a9631b5c3989ad |
occt: master e36ee967 2019-07-29 14:49:58 Committer: bugmaster Details Diff |
0026154: Visualization - v3d viewer grid disappears due to automatic z-fit V3d_RectangularGrid, V3d_CircularGrid, fixed initialization of presentation bounding box (lost Z offset). |
Affected Issues 0026154 |
|
mod - src/V3d/V3d_CircularGrid.cxx | Diff File | ||
mod - src/V3d/V3d_RectangularGrid.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-27 12:21 |
|
New Issue | |
2015-04-27 12:21 |
|
Assigned To | => kgv |
2015-04-27 12:21 |
|
File Added: before_vtop.png | |
2015-04-27 12:21 |
|
File Added: after_vtop.png | |
2016-06-16 21:43 | kgv | Steps to Reproduce Updated | |
2016-06-16 21:58 | kgv | Relationship added | related to 0026958 |
2016-10-25 09:37 | kgv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 11:04 | kgv | Target Version | 7.2.0 => 7.3.0 |
2017-08-10 13:26 |
|
Test case number | => bugs vis bug26154 |
2017-08-10 13:26 |
|
Note Added: 0069275 | |
2018-03-13 15:03 | kgv | Target Version | 7.3.0 => 7.4.0 |
2018-06-04 16:37 | kgv | Relationship added | has duplicate 0029837 |
2019-05-06 12:19 | kgv | Relationship added | related to 0030689 |
2019-05-14 17:53 | kgv | Assigned To | kgv => tizmaylo |
2019-05-14 17:53 | kgv | Status | new => assigned |
2019-06-24 18:40 |
|
Steps to Reproduce Updated | |
2019-07-29 17:52 | git | Note Added: 0085940 | |
2019-07-29 20:37 | git | Note Added: 0085944 | |
2019-07-29 22:08 | kgv | Note Added: 0085948 | |
2019-07-29 22:08 | kgv | Assigned To | tizmaylo => bugmaster |
2019-07-29 22:08 | kgv | Severity | minor => trivial |
2019-07-29 22:08 | kgv | Status | assigned => resolved |
2019-07-29 22:08 | kgv | Status | resolved => reviewed |
2019-07-29 22:12 | kgv | Product Version | => 5.2.2 |
2019-07-29 22:12 | kgv | Description Updated | |
2019-07-29 22:13 | kgv | Relationship deleted | related to 0030689 |
2019-07-29 22:13 | kgv | Relationship deleted | has duplicate 0029837 |
2019-07-31 13:59 | bugmaster | Note Added: 0085956 | |
2019-07-31 13:59 | bugmaster | Status | reviewed => tested |
2019-08-11 10:40 | bugmaster | Changeset attached | => occt master e36ee967 |
2019-08-11 10:40 | bugmaster | Status | tested => verified |
2019-08-11 10:40 | bugmaster | Resolution | open => fixed |
2019-08-11 10:50 | git | Note Added: 0086150 |