0026154: Visualization - v3d viewer grid disappears due to automatic z-fit

V3d_RectangularGrid, V3d_CircularGrid, fixed initialization of presentation bounding box (lost Z offset).